# Rigel

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  conanfile.txt
assets/: manifest.yaml
assets/animations/entities/: demo_spin.yaml  drone_interceptor.animation.json  drone_interceptor_trap.animation.json  drone_laser.animation.json  incinerator.animation.json  planteater.animation.json  player.animation.json
assets/blocks/: air.yaml  aluminium_panel.yaml  asphalt.yaml  battery_block.yaml  boombox[pitch=A#,octave=1].yaml  boombox[pitch=A#,octave=2].yaml  boombox[pitch=A#,octave=3].yaml  boombox[pitch=A#,octave=4].yaml  boombox[pitch=A,octave=1].yaml  boombox[pitch=A,octave=2].yaml  boombox[pitch=A,octave=3].yaml  boombox[pitch=A,octave=4].yaml  boombox[pitch=A4,octave=4].yaml  boombox[pitch=B,octave=1].yaml  boombox[pitch=B,octave=2].yaml  boombox[pitch=B,octave=3].yaml  boombox[pitch=B,octave=4].yaml  boombox[pitch=C#,octave=1].yaml  boombox[pitch=C#,octave=2].yaml  boombox[pitch=C#,octave=3].yaml  boombox[pitch=C#,octave=4].yaml  boombox[pitch=C,octave=1].yaml  boombox[pitch=C,octave=2].yaml  boombox[pitch=C,octave=3].yaml  boombox[pitch=C,octave=4].yaml  boombox[pitch=D#,octave=1].yaml  boombox[pitch=D#,octave=2].yaml  boombox[pitch=D#,octave=3].yaml  boombox[pitch=D#,octave=4].yaml  boombox[pitch=D,octave=1].yaml  boombox[pitch=D,octave=2].yaml  boombox[pitch=D,octave=3].yaml  boombox[pitch=D,octave=4].yaml  boombox[pitch=E,octave=1].yaml  boombox[pitch=E,octave=2].yaml  boombox[pitch=E,octave=3].yaml  boombox[pitch=E,octave=4].yaml  boombox[pitch=F#,octave=1].yaml  boombox[pitch=F#,octave=2].yaml  boombox[pitch=F#,octave=3].yaml  (+209 more)
assets/config/: persistence.yaml  render.yaml  world_generation.yaml
assets/config/worldgen_overlays/: no_carvers.yaml
assets/models/entities/: demo_anim.yaml  demo_cube.yaml  drone_laser.json  incinerator.json  model_bullet_projectile.json  model_drone_interceptor.json  model_drone_interceptor_trap.json  model_flame_projectile.json  model_laser_projectile.json  moon.json  planteater.json  player.json  sun.json  wire.json
assets/shaders/: chunk_debug.frag  chunk_debug.vert  entity.frag  entity.vert  entity_debug.vert  entity_shadow_depth.frag  entity_shadow_depth.vert  entity_unlit.frag  frame_graph.frag  frame_graph.vert  svo_lod.vert  taa_resolve.frag  taa_resolve.vert  voxel.frag  voxel.vert  voxel_shadow_depth.frag  voxel_shadow_depth.vert  voxel_shadow_transmit.frag  voxel_shadow_transmit.vert
cmake/: AssetResources.cmake
docs/: ApplicationLifecycle.md  AssetSystem.md  ConfigurationSystem.md  DebugTooling.md  EmbeddedAssets.md  EntitySystem.md  InputSystem.md  MultiWorld.md  PersistenceAPI.md  PersistenceBackends.md  README.md  RenderingPipeline.md  ShaderSystem.md  SvoLodBenchmarks.md  TestFramework.md  VoxelEngine.md  VoxelSvoBenchmarks.md  WorldGeneration.md  assets.md
include/Rigel/: Application.h  version.h.in
include/Rigel/Asset/: AssetAudit.h  AssetIR.h  AssetLoader.h  AssetManager.h  Assets.h  DefinitionRegistry.h  Handle.h  RawLoader.h  ShaderCompiler.h  ShaderLoader.h  TextureLoader.h  Types.h
include/Rigel/Core/: DebugBlockCatalog.h  Profiler.h
include/Rigel/Entity/: Aabb.h  Entity.h  EntityAnimation.h  EntityChunk.h  EntityComponents.h  EntityFactory.h  EntityId.h  EntityModel.h  EntityModelInstance.h  EntityModelLoader.h  EntityPersistence.h  EntityRegion.h  EntityRenderContext.h  EntityRenderer.h  EntityTags.h  EntityUtils.h  WorldEntities.h
include/Rigel/Persistence/: AsyncChunkLoader.h  ChunkSerializer.h  ChunkSpanMerge.h  Codecs.h  Containers.h  Format.h  FormatRegistry.h  PersistenceConfig.h  PersistenceService.h  Providers.h  RegionLayout.h  Storage.h  Types.h  WorldPersistence.h
include/Rigel/Util/: Ryml.h  (+2 more)
scripts/: convert_cr_animations.py
src/: main.cpp
src/asset/: AssetAudit.cpp  AssetIR.cpp  AssetManager.cpp  DefinitionRegistry.cpp  RawLoader.cpp  ShaderAsset.cpp  ShaderCompiler.cpp  ShaderLoader.cpp  TextureLoader.cpp
src/core/: Application.cpp  DebugBlockCatalog.cpp  Profiler.cpp
src/entity/: Entity.cpp  EntityAnimation.cpp  EntityChunk.cpp  EntityFactory.cpp  EntityId.cpp  EntityModel.cpp  EntityModelInstance.cpp  EntityModelLoader.cpp  EntityPersistence.cpp  EntityRegion.cpp  EntityRenderer.cpp  EntityUtils.cpp  WorldEntities.cpp
src/input/: GameplayInput.cpp  InputBindings.cpp  InputBindingsLoader.cpp  InputDispatcher.cpp  keypress.cpp  keys.cpp
src/persistence/: AsyncChunkLoader.cpp  ChunkSerializer.cpp  ChunkSpanMerge.cpp  FormatRegistry.cpp  PersistenceConfig.cpp  PersistenceService.cpp  Providers.cpp  Storage.cpp  WorldPersistence.cpp
src/render/: DebugOverlay.cpp
src/ui/: ImGuiBackends.cpp  ImGuiLayer.cpp
src/voxel/: BlockLoader.cpp  BlockRegistry.cpp  Chunk.cpp  ChunkCache.cpp  ChunkManager.cpp  ChunkMesh.cpp  ChunkRenderer.cpp  ChunkStreamer.cpp  DensityFunction.cpp  MeshBuilder.cpp  Noise.cpp  TextureAtlas.cpp  VoxelVertex.cpp  World.cpp  WorldConfigBootstrap.cpp  WorldConfigProvider.cpp  WorldGenConfig.cpp  WorldGenerator.cpp  WorldResources.cpp  WorldSet.cpp  WorldSpawn.cpp  WorldView.cpp
tests/: TestFramework.cpp  TestFramework.h  asset_audit_test.cpp  asset_definition_registry_test.cpp  asset_handle_test.cpp  asset_ir_test.cpp  asset_manager_test.cpp  async_chunk_loader_test.cpp  block_loader_test.cpp  block_registry_test.cpp  block_test.cpp  block_type_test.cpp  chunk_benchmark_test.cpp  chunk_cache_test.cpp  chunk_manager_test.cpp  chunk_mesh_test.cpp  chunk_renderer_test.cpp  chunk_span_merge_test.cpp  chunk_streamer_test.cpp  chunk_test.cpp  chunkcoord_test.cpp  debug_block_catalog_test.cpp  entity_animation_test.cpp  entity_chunk_test.cpp  entity_id_test.cpp  entity_model_loader_test.cpp  entity_persistence_test.cpp  entity_physics_test.cpp  entity_renderer_test.cpp  gameplay_input_test.cpp  imgui_layer_test.cpp  input_keypress_test.cpp  input_keys_test.cpp  main.cpp  mesh_builder_test.cpp  persistence_api_test.cpp  persistence_config_test.cpp  persistence_cr_backend_test.cpp  persistence_providers_test.cpp  persistence_world_persistence_test.cpp  (+30 more)
(+89 files in other folders)
